# FEUP-CAL

VaccineRouter/: CMakeLists.txt  GraphDisplayer.cpp  GraphDisplayer.h  Manager.cpp  Manager.h  MenuInterface.cpp  MenuInterface.h  POI.cpp  POI.h  README.md  data.txt  main.cpp
VaccineRouter/Graph/: Edge.cpp  Edge.h  Graph.h  GraphReader.cpp  Node.cpp  Node.h
VaccineRouter/algorithms/: AStar.cpp  AStar.h  Astar.cpp  Astar.h  BiAStar.cpp  BiAStar.h  BiDijkstra.cpp  BiDijkstra.h  BiDirectionalDijkstra.cpp  BiDirectionalDijkstra.h  ClarkeWright.cpp  ClarkeWright.h  Dijkstra.cpp  Dijkstra.h  Kosaraju.cpp  Kosaraju.h  NodeToAll.cpp  NodeToAll.h  NodeToNode.cpp  NodeToNode.h  Route.cpp  Route.h  Tarjan.cpp  Tarjan.h
VaccineRouter/graph/: Edge.cpp  Edge.h  Graph.cpp  Graph.h  GraphReader.cpp  GraphReader.h  Node.cpp  Node.h
VaccineRouter/maps/: clients.txt  depots.txt
VaccineRouter/menu/: menuInterface.cpp  menuInterface.h
VaccineRouter/structures/: POI.cpp  POI.h  Route.cpp  Route.h
